# puzzle_ros

./: .gitignore  README
install/: local_setup.sh  setup.sh
install/gui/share/gui/: local_setup.sh  package.bash  package.sh  package.zsh
install/planner/lib/planner/: planner
install/planner/share/planner/: package.bash  package.sh  package.zsh
install/vision/lib/vision/: vision
install/vision/share/vision/: local_setup.sh  package.sh
log/: latest_build
src/: puzzle_launch.py
src/gui/: CMakeLists.txt  package.xml
src/gui/include/: gui.hpp
src/gui/src/: gui.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/action/: SolvePuzzle.action
src/interfaces/msg/: Piece.msg  PiecePose.msg
src/interfaces/srv/: IdentifyPiece.srv  LoadPuzzle.srv  LocatePieces.srv
src/planner/: CMakeLists.txt  package.xml
src/planner/include/: planner.hpp
src/planner/src/: planner.cpp
src/py_gui/: package.xml  setup.cfg  setup.py
src/py_gui/py_gui/: py_gui.py
src/py_planner/: package.xml  setup.cfg  setup.py
src/py_planner/py_planner/: py_planner
src/py_vision/: package.xml  setup.cfg  setup.py
src/py_vision/py_vision/: OBRECON3X3.py  ORB_REALIZADO.py  PruebaPos.py  captura.py  main.py  obrg.py  py_vision.py  similares.py
src/vision/: CMakeLists.txt
src/vision/include/: vision.hpp
src/vision/src/: vision.cpp
